--- a/src/assets/layout/index.scss
+++ b/src/assets/layout/index.scss
@@ -4,3 +4,6 @@
 @import './properties';
 @import './sliderAgents.scss';
 @import './sliderFooter.scss';
+@import './propertyCatalog.scss';
+@import './ourContacts.scss';
+@import './ourBlog.scss'
